--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -200,13 +200,9 @@ int main(void)
 
 # 汇编
 
-```
-gcc -c HelloWorld.c -o HelloWorld.o
-```
+`gcc -c HelloWorld.c -o HelloWorld.o`
 
-```
-gcc -c HelloWorld.s -o HelloWorld.o
-```
+`gcc -c HelloWorld.s -o HelloWorld.o`
 
 再下来是汇编步骤，我们继续用一句话来描述：**汇编**就是**将编译后的汇编代码**翻译为**机器码**，几乎**每一条汇编指令**对应**一句机器码**。
 
@@ -222,15 +218,17 @@ Linux下的**可执行文件**以及**目标文件**的**格式**叫作**ELF**(E
 
 这一步是将**汇编**产生的**目标文件**和**所使用的库函数的目标文件**链接**生成一个可执行文件**的过程。
 
-我想在这里稍微的扩展一下篇幅，稍微详细的说一说链接，一来这里造成的错误通常难以理解和处理，二来使用第三方库在开发中越来越常见了，想着大家可能更需要稍微了解一些细节了。
+我想在这里稍微的扩展一下篇幅，稍微详细的说一说链接，一来这里造成的**错误通常难以理解和处理**，二来使用**第三方库**在开发中越来越常见了，想着大家可能更需要稍微了解一些细节了。
 
-我们先介绍gnu binutils工具包，这是一整套的二进制分析处理工具包。详细介绍请大家参考喂鸡百科：http://zh.wikipedia.org/wiki/GNU_Binutils
+我们先介绍`gnu binutils`工具包，这是一整套的**二进制分析处理工具包**。详细介绍请大家参考维基百科：http://zh.wikipedia.org/wiki/GNU_Binutils
 
 我的fedora已经自带了这套工具包，如果你的发行版没有，请自行搜索安装方法。
 
-这套工具包含了足够多的工具，我们甚至可以用来研究ELF文件的格式等内容。不过本文只是抛砖引玉，更多的使用方法和技巧还是需要大家自己去学习和研究。
+这套工具包含了足够多的工具，我们甚至可以用来**研究ELF文件的格式**等内容。不过本文只是抛砖引玉，更多的使用方法和技巧还是需要大家自己去学习和研究。
 
-由于时间关系，上篇到此就告一段落了，我们的问题2和3还没有给出完整的答案，而且链接还没有详细去解释和说明。这些内容我们将在下篇中解决，当然，大家也可以先行研究，到时候我们相互学习补充。
+链接这个话题延伸之后完全可以跑到九霄云外去，为了避免本文牵扯到过多的话题导致言之泛泛，我们先设定本文涉及的范围。我们今天**只讨论**链接进行的**大致步骤及其规则**、**静态链接库**与**动态链接库**的**创建**和**使用**这两大块的问题。至于可执行文件的加载、可执行文件的运行时储存器映像之类的内容我们暂时不讨论。
+
+首先，什么是链接？我们引用CSAPP的定义：`链接（linking）`是将各种**代码**和**数据**部分收集起来并组合成为一个单一文件的过程，这个文件可被加载（或被拷贝）到存储器并执行。
 
 # 参考
 
