--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -228,7 +228,36 @@ Linux下的**可执行文件**以及**目标文件**的**格式**叫作**ELF**(E
 
 链接这个话题延伸之后完全可以跑到九霄云外去，为了避免本文牵扯到过多的话题导致言之泛泛，我们先设定本文涉及的范围。我们今天**只讨论**链接进行的**大致步骤及其规则**、**静态链接库**与**动态链接库**的**创建**和**使用**这两大块的问题。至于可执行文件的加载、可执行文件的运行时储存器映像之类的内容我们暂时不讨论。
 
-首先，什么是链接？我们引用CSAPP的定义：`链接（linking）`是将各种**代码**和**数据**部分收集起来并组合成为一个单一文件的过程，这个文件可被加载（或被拷贝）到存储器并执行。
+首先，什么是链接？我们引用CSAPP的定义：`链接（linking）`是将各种**代码**和**数据**部分收集起来并**组合成为一个单一文件**的过程，这个文件可被加载（或被拷贝）到存储器并执行。
+
+需要强调的是，**链接**可以执行于**编译时**（compile time），也就是在**源代码**被翻译成**机器代码**时；也可以执行于**加载时**，也就是在程序被加载器（`loader`）加载到存储器并执行时；甚至执行于**运行时**（run time），由应用程序来执行。
+
+说了这么多，了解链接有什么用呢？生命这么短暂，我们干嘛要去学习一些根本用不到的东西。当然有用了，继续引用CSAPP的说法，如下：
+
+1. 理解链接器将帮助你构造大型程序。
+2. 理解链接器将帮助你避免一些危险的编程错误。
+3. 理解链接将帮助你理解语言的作用域是如何实现的。
+4. 理解链接将帮助你理解其他重要的系统概念。
+5. 理解链接将使你能够利用共享库。
+6. ……
+
+为了避免我们的描述过于枯燥，我们还是以C语言为例吧。想必大家通过我们在上篇中的描述，已经知道**C代码编译后的目标文件**了吧。**目标文件**最终要和**标准库**进行**链接**生成**最后的可执行文件**。那么，标准库和我们生成的目标文件是什么关系呢？
+
+其实，任何一个程序，它的背后都有一套庞大的代码在支撑着它，以使得该程序能够正常运行。这套代码至少包括**入口函数**、以及其所依赖的函数构成的函数集合。当然，它还包含了各种标准库函数的实现。
+
+这个“支撑模块”就叫做运行时库（Runtime Library）。而C语言的运行库，即被称为C运行时库（CRT）。
+
+CRT大致包括：启动与退出相关的代码（包括入口函数及入口函数所依赖的其他函数）、标准库函数（ANSI C标准规定的函数实现）、I/O相关、堆的封装实现、语言特殊功能的实现以及调试相关。其中标准库函数的实现占据了主要地位。标准库函数大家想必很熟悉了，而我们平时常用的printf，scanf函数就是标准库函数的成员。C语言标准库在不同的平台上实现了不同的版本，我们只要依赖其接口定义，就能保证程序在不同平台上的一致行为。C语言标准库有24个，囊括标准输入输出、文件操作、字符串操作、数学函数以及日期等等内容。大家有兴趣的可以自行搜索。
+
+既然C语言提供了标准库函数供我们使用，那么以什么形式提供呢？源代码吗？当然不是了。下面我们引入静态链接库的概念。我们几乎每一次写程序都难免去使用库函数，那么每一次去编译岂不是太麻烦了。干嘛不把标准库函数提前编译好，需要的时候直接链接呢？我很负责任的说，我们就是这么做的。
+
+那么，标准库以什么形式存在呢？一个目标文件？我们知道，链接的最小单位就是一个个目标文件，如果我们只用到一个printf函数，就需要和整个库链接的话岂不是太浪费资源了么？但是，如果把库函数分别定义在彼此独立的代码文件里，这样编译出来的可是一大堆目标文件，有点混乱吧？所以，编辑器系统提供了一种机制，将所有的编译出来的目标文件打包成一个单独的文件，叫做静态库（static library）。当链接器和静态库链接的时候，链接器会从这个打包的文件中“解压缩”出需要的部分目标文件进行链接。这样就解决了资源浪费的问题。
+
+Linux/Unix系统下ANSI C的库名叫做libc.a，另外数学函数单独在libm.a库里。静态库采用一种称为存档（archive）的特殊文件格式来保存。其实就是一个目标文件的集合，文件头描述了每个成员目标文件的位置和大小。
+
+光说不练是假把式，我们自己做个静态库试试。为了简单起见我们就做一个只有两个函数的私有库吧。
+
+我们在swap.c里定义一个swap函数，在add.c里定义了一个add函数。最后还有含有它们声明的calc.h头文件。
 
 # 参考
 
