--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -243,11 +243,11 @@ Linux下的**可执行文件**以及**目标文件**的**格式**叫作**ELF**(E
 
 为了避免我们的描述过于枯燥，我们还是以C语言为例吧。想必大家通过我们在上篇中的描述，已经知道**C代码编译后的目标文件**了吧。**目标文件**最终要和**标准库**进行**链接**生成**最后的可执行文件**。那么，标准库和我们生成的目标文件是什么关系呢？
 
-其实，任何一个程序，它的背后都有一套庞大的代码在支撑着它，以使得该程序能够正常运行。这套代码至少包括**入口函数**、以及其所依赖的函数构成的函数集合。当然，它还包含了各种标准库函数的实现。
+其实，任何一个程序，它的背后都有一套庞大的代码在支撑着它，以使得该程序能够正常运行。这套代码至少包括**入口函数**、以及其**所依赖的函数**构成的**函数集合**。当然，它还包含了各种标准库函数的实现。
 
-这个“支撑模块”就叫做运行时库（Runtime Library）。而C语言的运行库，即被称为C运行时库（CRT）。
+这个“支撑模块”就叫做**运行时库**（`Runtime Library`）。而C语言的运行库，即被称为`C运行时库（CRT`）。
 
-CRT大致包括：启动与退出相关的代码（包括入口函数及入口函数所依赖的其他函数）、标准库函数（ANSI C标准规定的函数实现）、I/O相关、堆的封装实现、语言特殊功能的实现以及调试相关。其中标准库函数的实现占据了主要地位。标准库函数大家想必很熟悉了，而我们平时常用的printf，scanf函数就是标准库函数的成员。C语言标准库在不同的平台上实现了不同的版本，我们只要依赖其接口定义，就能保证程序在不同平台上的一致行为。C语言标准库有24个，囊括标准输入输出、文件操作、字符串操作、数学函数以及日期等等内容。大家有兴趣的可以自行搜索。
+`CRT`大致包括：**启动**与**退出**相关的**代码**（包括**入口函数**及入口函数所**依赖的其他函数**）、**标准库函数**（ANSI C标准规定的函数实现）、`I/O`相关、**堆的封装实现**、**语言特殊功能的实现**以及**调试相关**。其中**标准库函数的实现**占据了主要地位。标准库函数大家想必很熟悉了，而我们平时常用的printf，scanf函数就是标准库函数的成员。**C语言标准库**在**不同的平台**上实现了**不同的版本**，我们只要依赖其接口定义，就能保证程序在不同平台上的一致行为。C语言标准库有24个，囊括标准输入输出、文件操作、字符串操作、数学函数以及日期等等内容。大家有兴趣的可以自行搜索。
 
 既然C语言提供了标准库函数供我们使用，那么以什么形式提供呢？源代码吗？当然不是了。下面我们引入静态链接库的概念。我们几乎每一次写程序都难免去使用库函数，那么每一次去编译岂不是太麻烦了。干嘛不把标准库函数提前编译好，需要的时候直接链接呢？我很负责任的说，我们就是这么做的。
 
