--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -247,11 +247,15 @@ Linux下的**可执行文件**以及**目标文件**的**格式**叫作**ELF**(E
 
 这个“支撑模块”就叫做**运行时库**（`Runtime Library`）。而C语言的运行库，即被称为`C运行时库（CRT`）。
 
-`CRT`大致包括：**启动**与**退出**相关的**代码**（包括**入口函数**及入口函数所**依赖的其他函数**）、**标准库函数**（ANSI C标准规定的函数实现）、`I/O`相关、**堆的封装实现**、**语言特殊功能的实现**以及**调试相关**。其中**标准库函数的实现**占据了主要地位。标准库函数大家想必很熟悉了，而我们平时常用的printf，scanf函数就是标准库函数的成员。**C语言标准库**在**不同的平台**上实现了**不同的版本**，我们只要依赖其接口定义，就能保证程序在不同平台上的一致行为。C语言标准库有24个，囊括标准输入输出、文件操作、字符串操作、数学函数以及日期等等内容。大家有兴趣的可以自行搜索。
+`CRT`大致包括：**启动**与**退出**相关的**代码**（包括**入口函数**及入口函数所**依赖的其他函数**）、**标准库函数**（ANSI C标准规定的函数实现）、`I/O`相关、**堆的封装实现**、**语言特殊功能的实现**以及**调试相关**。其中**标准库函数的实现**占据了主要地位。标准库函数大家想必很熟悉了，而我们平时常用的printf，scanf函数就是标准库函数的成员。**C语言标准库**在**不同的平台**上实现了**不同的版本**，我们**只要依赖其接口定义**，就能保证程序在不同平台上的一致行为。**C语言标准库**有**24**个，囊括标准输入输出、文件操作、字符串操作、数学函数以及日期等等内容。大家有兴趣的可以自行搜索。
 
-既然C语言提供了标准库函数供我们使用，那么以什么形式提供呢？源代码吗？当然不是了。下面我们引入静态链接库的概念。我们几乎每一次写程序都难免去使用库函数，那么每一次去编译岂不是太麻烦了。干嘛不把标准库函数提前编译好，需要的时候直接链接呢？我很负责任的说，我们就是这么做的。
+既然C语言提供了标准库函数供我们使用，那么以**什么形式提供**呢？**源代码**吗？当然**不是**了。下面我们引入**静态链接库**的概念。我们几乎每一次写程序都难免去使用库函数，那么每一次去编译岂不是太麻烦了。干嘛不把**标准库函数提前编译好**，需要的时候**直接链接**呢？我很负责任的说，我们就是这么做的。
 
-那么，标准库以什么形式存在呢？一个目标文件？我们知道，链接的最小单位就是一个个目标文件，如果我们只用到一个printf函数，就需要和整个库链接的话岂不是太浪费资源了么？但是，如果把库函数分别定义在彼此独立的代码文件里，这样编译出来的可是一大堆目标文件，有点混乱吧？所以，编辑器系统提供了一种机制，将所有的编译出来的目标文件打包成一个单独的文件，叫做静态库（static library）。当链接器和静态库链接的时候，链接器会从这个打包的文件中“解压缩”出需要的部分目标文件进行链接。这样就解决了资源浪费的问题。
+那么，**标准库**以**什么形式**存在呢？一个目标文件？我们知道，**链接的最小单位**就是**一个个目标文件**，如果我们**只用**到一个**printf函数**，就需要和**整个库链接**的话岂不是**太浪费资源**了么？但是，如果把**库函数**分别定义在彼此**独立的代码文件**里，这样编译出来的可是**一大堆目标文件**，有点混乱吧？
+
+所以，**编辑器系统**提供了**一种机制**，将**所有的编译出来的目标文件**打包成**一个单独的文件**，叫做`静态库（static library）`。
+
+当**链接器**和**静态库链接**的时候，**链接器**会从**这个打包的文件**中“**解压缩**”出**需要的部分目标文件**进行**链接**。这样就解决了资源浪费的问题。
 
 Linux/Unix系统下ANSI C的库名叫做libc.a，另外数学函数单独在libm.a库里。静态库采用一种称为存档（archive）的特殊文件格式来保存。其实就是一个目标文件的集合，文件头描述了每个成员目标文件的位置和大小。
 
