--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -257,7 +257,7 @@ Linux下的**可执行文件**以及**目标文件**的**格式**叫作**ELF**(E
 
 当**链接器**和**静态库链接**的时候，**链接器**会从**这个打包的文件**中“**解压缩**”出**需要的部分目标文件**进行**链接**。这样就解决了资源浪费的问题。
 
-Linux/Unix系统下ANSI C的库名叫做libc.a，另外数学函数单独在libm.a库里。静态库采用一种称为存档（archive）的特殊文件格式来保存。其实就是一个目标文件的集合，文件头描述了每个成员目标文件的位置和大小。
+Linux/Unix系统下`ANSI C`的库名叫做`libc.a`，另外**数学函数**单独在`libm.a`库里。**静态库**采用一种称为`存档（archive）`的**特殊文件格式**来**保存**。其实就是**一个目标文件的集合**，**文件头**描述了**每个成员目标文件**的**位置**和**大小**。
 
 光说不练是假把式，我们自己做个静态库试试。为了简单起见我们就做一个只有两个函数的私有库吧。
 
