--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -214,17 +214,24 @@ Linux下的**可执行文件**以及**目标文件**的**格式**叫作**ELF**(E
 
 # 链接
 
-我们接下来看最后的链接过程。
-
-这一步是将**汇编**产生的**目标文件**和**所使用的库函数的目标文件**链接**生成一个可执行文件**的过程。
-
-我想在这里稍微的扩展一下篇幅，稍微详细的说一说链接，一来这里造成的**错误通常难以理解和处理**，二来使用**第三方库**在开发中越来越常见了，想着大家可能更需要稍微了解一些细节了。
+## GNU binutils
 
 我们先介绍`gnu binutils`工具包，这是一整套的**二进制分析处理工具包**。详细介绍请大家参考维基百科：http://zh.wikipedia.org/wiki/GNU_Binutils
 
 我的fedora已经自带了这套工具包，如果你的发行版没有，请自行搜索安装方法。
 
+```
+yum install binutils
+```
+
 这套工具包含了足够多的工具，我们甚至可以用来**研究ELF文件的格式**等内容。不过本文只是抛砖引玉，更多的使用方法和技巧还是需要大家自己去学习和研究。
+
+
+我们接下来看最后的链接过程。
+
+这一步是将**汇编**产生的**目标文件**和**所使用的库函数的目标文件**链接**生成一个可执行文件**的过程。
+
+我想在这里稍微的扩展一下篇幅，稍微详细的说一说链接，一来这里造成的**错误通常难以理解和处理**，二来使用**第三方库**在开发中越来越常见了，想着大家可能更需要稍微了解一些细节了。
 
 链接这个话题延伸之后完全可以跑到九霄云外去，为了避免本文牵扯到过多的话题导致言之泛泛，我们先设定本文涉及的范围。我们今天**只讨论**链接进行的**大致步骤及其规则**、**静态链接库**与**动态链接库**的**创建**和**使用**这两大块的问题。至于可执行文件的加载、可执行文件的运行时储存器映像之类的内容我们暂时不讨论。
 
@@ -258,6 +265,8 @@ Linux下的**可执行文件**以及**目标文件**的**格式**叫作**ELF**(E
 当**链接器**和**静态库链接**的时候，**链接器**会从**这个打包的文件**中“**解压缩**”出**需要的部分目标文件**进行**链接**。这样就解决了资源浪费的问题。
 
 Linux/Unix系统下`ANSI C`的库名叫做`libc.a`，另外**数学函数**单独在`libm.a`库里。**静态库**采用一种称为`存档（archive）`的**特殊文件格式**来**保存**。其实就是**一个目标文件的集合**，**文件头**描述了**每个成员目标文件**的**位置**和**大小**。
+
+## 例子
 
 光说不练是假把式，我们自己做个静态库试试。为了简单起见我们就做一个只有两个函数的私有库吧。
 
