--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -214,7 +214,7 @@ Linux下的**可执行文件**以及**目标文件**的**格式**叫作**ELF**(E
 
 # 链接
 
-## GNU binutils
+## GNU binutils工具包
 
 我们先介绍`gnu binutils`工具包，这是一整套的**二进制分析处理工具包**。详细介绍请大家参考维基百科：http://zh.wikipedia.org/wiki/GNU_Binutils
 
@@ -225,6 +225,9 @@ yum install binutils
 ```
 
 这套工具包含了足够多的工具，我们甚至可以用来**研究ELF文件的格式**等内容。不过本文只是抛砖引玉，更多的使用方法和技巧还是需要大家自己去学习和研究。
+
+包含诸多工具, 比如 `ld`、`as`、`objdump`等. 官网: https://www.gnu.org/software/binutils/ .
+
 
 
 我们接下来看最后的链接过程。
