--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -228,7 +228,7 @@ yum install binutils
 
 包含诸多工具, 比如 `ld`、`as`、`objdump`等. 官网: https://www.gnu.org/software/binutils/ .
 
-
+## 链接相关知识
 
 我们接下来看最后的链接过程。
 
@@ -236,7 +236,9 @@ yum install binutils
 
 我想在这里稍微的扩展一下篇幅，稍微详细的说一说链接，一来这里造成的**错误通常难以理解和处理**，二来使用**第三方库**在开发中越来越常见了，想着大家可能更需要稍微了解一些细节了。
 
-链接这个话题延伸之后完全可以跑到九霄云外去，为了避免本文牵扯到过多的话题导致言之泛泛，我们先设定本文涉及的范围。我们今天**只讨论**链接进行的**大致步骤及其规则**、**静态链接库**与**动态链接库**的**创建**和**使用**这两大块的问题。至于可执行文件的加载、可执行文件的运行时储存器映像之类的内容我们暂时不讨论。
+链接这个话题延伸之后完全可以跑到九霄云外去，为了避免本文牵扯到过多的话题导致言之泛泛，我们先设定本文涉及的范围。
+
+我们今天**只讨论**链接进行的**大致步骤及其规则**、**静态链接库**与**动态链接库**的**创建**和**使用**这两大块的问题。至于**可执行文件的加载**、**可执行文件的运行时储存器映像**之类的内容我们**暂时不讨论**。
 
 首先，什么是链接？我们引用CSAPP的定义：`链接（linking）`是将各种**代码**和**数据**部分收集起来并**组合成为一个单一文件**的过程，这个文件可被加载（或被拷贝）到存储器并执行。
 
