--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -1,4 +1,4 @@
-
+# 
 详细的流程在经典的《Linkers and Loaders》和《深入理解计算机系统》中均有描述，也有国产的诸如《程序员的自我修养——链接、装载与库》等大牛著作。
 
 我的环境：Fedora 16 i686 kernel-3.6.11-4 gcc 4.6.3
@@ -182,7 +182,7 @@ int main(void)
 
 另外再补充一点，gcc其实**并不要求**函数一定要在**被调用之前定义或者声明**（MSVC不允许），因为**gcc**在处理到**某个未知类型的函数**时，会为其**创建一个隐式声明**，并**假设**该**函数返回值类型为int**。但**gcc**此时**无法检查**传递给该函数的**实参类型**和**个数**是否正确，不利于编译器为我们排除错误（而且如果该**函数的返回值不是int**的话也会**出错！！！**）。所以还是建议大家在函数调用前，先对其定义或声明。
 
-# 编译
+# 编译: 生成汇编码
 
 `gcc -S HelloWorld.c -o HelloWorld.s`
 
@@ -198,9 +198,13 @@ int main(void)
 
 顺便说一句，这里生成的**汇编**是`AT&T`风格的汇编代码，如果大家更熟悉Intel风格，可以在命令行加上参数 `-masm=intel` ,这样gcc就会生成**Intel风格**的汇编代码了。不过**gcc的内联汇编**只支持`AT&T`风格，大家还是找找资料学学AT&T风格吧。
 
-# 汇编
+# 汇编: 生成机器码
+
+从 .c C源码生成:
 
 `gcc -c HelloWorld.c -o HelloWorld.o`
+
+从 .s 汇编码生成:
 
 `gcc -c HelloWorld.s -o HelloWorld.o`
 
