--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -1,4 +1,5 @@
-# 
+# 整个过程示例
+
 详细的流程在经典的《Linkers and Loaders》和《深入理解计算机系统》中均有描述，也有国产的诸如《程序员的自我修养——链接、装载与库》等大牛著作。
 
 我的环境：Fedora 16 i686 kernel-3.6.11-4 gcc 4.6.3
@@ -27,7 +28,9 @@ int main(void)
 Hello World
 ```
 
-可是，简单的命令背后经过了什么样的处理过程呢？gcc真的就“直接”生成了最后的可执行文件了吗？当然不是，我们在**gcc编译命令**行加上参数 `–verbose` 要求gcc输出完整的处理过程(命令行加上 `-v` 也行)，我们看到了一段较长的过程输出。
+可是，简单的命令背后经过了什么样的处理过程呢？gcc真的就“直接”生成了最后的可执行文件了吗？
+
+当然不是，我们在**gcc编译命令**行加上参数 `–verbose` 要求gcc输出完整的处理过程(命令行加上 `-v` 也行)，我们看到了一段较长的过程输出。
 
 ```
 [root@lihaiwei cpptest]# gcc --verbose HelloWorld.c -o HelloWorld
@@ -78,7 +81,7 @@ gcc处理HelloWorld.c的大致过程：
 
 括号中我注明了各个过程中实际执行任务的程序名称：`预处理器cpp`、`编译器cc1`、`汇编器as`以及最后的`链接器ld`。
 
-# 预处理
+# 预处理: 
 
 `gcc -E HelloWorld.c -o HelloWorld.i`
 
@@ -98,12 +101,12 @@ gcc处理HelloWorld.c的大致过程：
 
 我直接给出预处理器处理的大致范围吧。
 
-* 展开所有的宏定义并删除 `#define`
-* 处理所有的条件编译指令，例如 `#if #else #endif #ifndef …`
-* 把所有的 `#include` 替换为头文件实际内容，递归进行
-* 把所有的注释 `//` 和 `/* */` 替换为空格
+* 展开所有的**宏定义**并删除 `#define`
+* 处理所有的**条件编译指令**，例如 `#if #else #endif #ifndef …`
+* 把所有的 `#include` 替换为**头文件实际内容**，递归进行
+* 把所有的**注释** `//` 和 `/* */` 替换为**空格**
 * 添加行号和文件名标识以供编译器使用
-* 保留所有的 #pragma 指令，因为编译器要使用
+* 保留所有的 `#pragma` 指令，因为编译器要使用
 * ……
 
 基本上就是这些了。在这里我顺便插播一个小技巧，在代码中有时候**宏定义比较复杂的时候**我们很**难判断其处理后的结构是否正确**。这个时候我们呢就可以使用gcc的`-E参数`输出处理结果来判断了。
