--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -81,9 +81,11 @@ gcc处理HelloWorld.c的大致过程：
 
 括号中我注明了各个过程中实际执行任务的程序名称：`预处理器cpp`、`编译器cc1`、`汇编器as`以及最后的`链接器ld`。
 
-# 预处理: 
+# 预处理: 转换成新C源码文件
 
 `gcc -E HelloWorld.c -o HelloWorld.i`
+
+`-E`选项是"Preprocess only; do not compile, assemble or link", 即"只是预处理, 不编译、不汇编和不链接".
 
 我们一步一步来看，首先是预处理，我们看看预处理阶段对代码进行了哪些处理。
 
@@ -169,7 +171,7 @@ Hello World
 查看`gcc -E HelloWorld.c -o HelloWorld.i`
 
 ```
-# cat HelloWorld.i
+[root@lihaiwei cpptest]# cat HelloWorld.i
 # 1 "HelloWorld.c"
 # 1 "<built-in>"
 # 1 "<command-line>"
