--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -85,7 +85,7 @@ gcc处理HelloWorld.c的大致过程：
 
 `gcc -E HelloWorld.c -o HelloWorld.i`
 
-`-E`选项是"Preprocess only; do not compile, assemble or link", 即"只是预处理, 不编译、不汇编和不链接".
+`-E` 选项是"Preprocess only; do not compile, assemble or link", 即"**仅仅预处理**, **不编译、不汇编和不链接"**.
 
 我们一步一步来看，首先是预处理，我们看看预处理阶段对代码进行了哪些处理。
 
@@ -193,6 +193,8 @@ int main(void)
 
 `gcc -S HelloWorld.i -o HelloWorld.s`
 
+`-S`选项是"Compile only; do not assemble or link", 即"**仅仅编译**, **不汇编和不链接"**. 
+
 接着看编译和汇编。
 
 那么什么是编译？一句话描述：**编译**就是把**预处理之后的文件**进行一系列**词法分析**、**语法分析**、**语义分析**以及优化后生成的**相应汇编代码**文件。
@@ -212,6 +214,8 @@ int main(void)
 从 .s 汇编码生成:
 
 `gcc -c HelloWorld.s -o HelloWorld.o`
+
+
 
 再下来是汇编步骤，我们继续用一句话来描述：**汇编**就是**将编译后的汇编代码**翻译为**机器码**，几乎**每一条汇编指令**对应**一句机器码**。
 
