--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -187,7 +187,7 @@ int main(void)
 
 另外再补充一点，gcc其实**并不要求**函数一定要在**被调用之前定义或者声明**（MSVC不允许），因为**gcc**在处理到**某个未知类型的函数**时，会为其**创建一个隐式声明**，并**假设**该**函数返回值类型为int**。但**gcc**此时**无法检查**传递给该函数的**实参类型**和**个数**是否正确，不利于编译器为我们排除错误（而且如果该**函数的返回值不是int**的话也会**出错！！！**）。所以还是建议大家在函数调用前，先对其定义或声明。
 
-# 编译: 生成汇编码
+# 编译: 从预处理后的C源码生成汇编码
 
 `gcc -S HelloWorld.c -o HelloWorld.s`
 
@@ -205,7 +205,7 @@ int main(void)
 
 顺便说一句，这里生成的**汇编**是`AT&T`风格的汇编代码，如果大家更熟悉Intel风格，可以在命令行加上参数 `-masm=intel` ,这样gcc就会生成**Intel风格**的汇编代码了。不过**gcc的内联汇编**只支持`AT&T`风格，大家还是找找资料学学AT&T风格吧。
 
-# 汇编: 生成机器码
+# 汇编: 从汇编代码生成机器码
 
 从 .c C源码生成:
 
@@ -215,7 +215,7 @@ int main(void)
 
 `gcc -c HelloWorld.s -o HelloWorld.o`
 
-
+`-c`选项是"Compile and assemble, but do not link", 即"**编译和汇编**, **不链接"**. 
 
 再下来是汇编步骤，我们继续用一句话来描述：**汇编**就是**将编译后的汇编代码**翻译为**机器码**，几乎**每一条汇编指令**对应**一句机器码**。
 
@@ -225,7 +225,11 @@ Linux下的**可执行文件**以及**目标文件**的**格式**叫作**ELF**(E
 
 由于本文的读者定位，我们不能详细展开说了，有相关需求的同学可以去看《Windows PE权威指南》和《程序员的自我修养》去详细了解。
 
-# 链接
+# 链接: 从目标文件和其他库的目标文件生成一个可执行文件
+
+我们接下来看最后的链接过程。
+
+这一步是将**汇编**产生的**目标文件**和**所使用的库函数的目标文件**链接**生成一个可执行文件**的过程。
 
 ## GNU binutils工具包
 
@@ -242,10 +246,6 @@ yum install binutils
 包含诸多工具, 比如 `ld`、`as`、`objdump`等. 官网: https://www.gnu.org/software/binutils/ .
 
 ## 链接相关知识
-
-我们接下来看最后的链接过程。
-
-这一步是将**汇编**产生的**目标文件**和**所使用的库函数的目标文件**链接**生成一个可执行文件**的过程。
 
 我想在这里稍微的扩展一下篇幅，稍微详细的说一说链接，一来这里造成的**错误通常难以理解和处理**，二来使用**第三方库**在开发中越来越常见了，想着大家可能更需要稍微了解一些细节了。
 
