--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -117,6 +117,8 @@ gcc处理HelloWorld.c的大致过程：
 
 其实在**比较早**的时候**调用函数并不需要声明**，后来因为“笔误”之类的错误实在太多，造成了链接期间的错误过多，**所有编译器**开始要求对**所有使用的变量或者函数**给出**声明**，以支持编译器进行**参数检查**和**类型匹配**。**头文件**包含的基本上就是**这些东西**和**一些预先的宏定义**来方便程序员编程。
 
+## 
+
 其实对于我们的`HelloWorld.c`程序来说**不需要这个庞大的头文件**，只需要在**main函数前**声明printf函数，不需要`#include<stdio.h>`即可通过编译。
 
 ```cpp
@@ -185,11 +187,19 @@ int main(void)
 }
 ```
 
-另外再补充一点，gcc其实**并不要求**函数一定要在**被调用之前定义或者声明**（MSVC不允许），因为**gcc**在处理到**某个未知类型的函数**时，会为其**创建一个隐式声明**，并**假设**该**函数返回值类型为int**。但**gcc**此时**无法检查**传递给该函数的**实参类型**和**个数**是否正确，不利于编译器为我们排除错误（而且如果该**函数的返回值不是int**的话也会**出错！！！**）。所以还是建议大家在函数调用前，先对其定义或声明。
+另外再补充一点，gcc其实**并不要求**函数一定要在**被调用之前定义或者声明**（MSVC不允许），因为**gcc**在处理到**某个未知类型的函数**时，会为其**创建一个隐式声明**，并**假设**该**函数返回值类型为int**。
+
+但**gcc**此时**无法检查**传递给该函数的**实参类型！！！** 和**个数！！！** 是否正确，**不利于编译器为我们排除错误**（而且如果该**函数的返回值不是int**的话也会**出错！！！**）。
+
+所以还是建议大家在函数调用前，先对其定义或声明。
 
 # 编译: 从预处理后的C源码生成汇编码
 
+从 `.c` C源码生成:
+
 `gcc -S HelloWorld.c -o HelloWorld.s`
+
+从 `.i` 预处理后C源码生成:
 
 `gcc -S HelloWorld.i -o HelloWorld.s`
 
@@ -207,11 +217,11 @@ int main(void)
 
 # 汇编: 从汇编代码生成机器码
 
-从 .c C源码生成:
+从 `.c` C源码生成:
 
 `gcc -c HelloWorld.c -o HelloWorld.o`
 
-从 .s 汇编码生成:
+从 `.s` 汇编代码生成:
 
 `gcc -c HelloWorld.s -o HelloWorld.o`
 
@@ -253,9 +263,13 @@ yum install binutils
 
 我们今天**只讨论**链接进行的**大致步骤及其规则**、**静态链接库**与**动态链接库**的**创建**和**使用**这两大块的问题。至于**可执行文件的加载**、**可执行文件的运行时储存器映像**之类的内容我们**暂时不讨论**。
 
+### 什么是链接
+
 首先，什么是链接？我们引用CSAPP的定义：`链接（linking）`是将各种**代码**和**数据**部分收集起来并**组合成为一个单一文件**的过程，这个文件可被加载（或被拷贝）到存储器并执行。
 
 需要强调的是，**链接**可以执行于**编译时**（compile time），也就是在**源代码**被翻译成**机器代码**时；也可以执行于**加载时**，也就是在程序被加载器（`loader`）加载到存储器并执行时；甚至执行于**运行时**（run time），由应用程序来执行。
+
+### 了解链接的用处
 
 说了这么多，了解链接有什么用呢？生命这么短暂，我们干嘛要去学习一些根本用不到的东西。当然有用了，继续引用CSAPP的说法，如下：
 
@@ -265,6 +279,8 @@ yum install binutils
 4. 理解链接将帮助你理解其他重要的系统概念。
 5. 理解链接将使你能够利用共享库。
 6. ……
+
+
 
 为了避免我们的描述过于枯燥，我们还是以C语言为例吧。想必大家通过我们在上篇中的描述，已经知道**C代码编译后的目标文件**了吧。**目标文件**最终要和**标准库**进行**链接**生成**最后的可执行文件**。那么，标准库和我们生成的目标文件是什么关系呢？
 
