--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -113,11 +113,15 @@ gcc处理HelloWorld.c的大致过程：
 
 基本上就是这些了。在这里我顺便插播一个小技巧，在代码中有时候**宏定义比较复杂的时候**我们很**难判断其处理后的结构是否正确**。这个时候我们呢就可以使用gcc的`-E参数`输出处理结果来判断了。
 
-前文中我们提到了**头文件**中放置的是**变量定义**和**函数声明**等等内容。这些到底是什么东西呢？
+## 头文件的作用
 
-其实在**比较早**的时候**调用函数并不需要声明**，后来因为“笔误”之类的错误实在太多，造成了链接期间的错误过多，**所有编译器**开始要求对**所有使用的变量或者函数**给出**声明**，以支持编译器进行**参数检查**和**类型匹配**。**头文件**包含的基本上就是**这些东西**和**一些预先的宏定义**来方便程序员编程。
+前文中我们提到了**头文件！！！** 中放置的是**变量定义！！！** 和**函数声明！！！** 等等内容。这些到底是什么东西呢？
 
-## 
+其实在**比较早**的时候**调用函数并不需要声明**，后来因为“笔误”之类的错误实在太多，造成了链接期间的错误过多，**所有编译器**开始要求对**所有使用的变量或者函数**给出**声明**，以支持编译器进行**参数检查**和**类型匹配**。
+
+**头文件**包含的基本上就是**这些东西**和**一些预先的宏定义**来方便程序员编程。
+
+## 不要头文件但手动声明
 
 其实对于我们的`HelloWorld.c`程序来说**不需要这个庞大的头文件**，只需要在**main函数前**声明printf函数，不需要`#include<stdio.h>`即可通过编译。
 
@@ -280,7 +284,7 @@ yum install binutils
 5. 理解链接将使你能够利用共享库。
 6. ……
 
-
+### 
 
 为了避免我们的描述过于枯燥，我们还是以C语言为例吧。想必大家通过我们在上篇中的描述，已经知道**C代码编译后的目标文件**了吧。**目标文件**最终要和**标准库**进行**链接**生成**最后的可执行文件**。那么，标准库和我们生成的目标文件是什么关系呢？
 
