--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -219,7 +219,7 @@ int main(void)
 
 顺便说一句，这里生成的**汇编**是`AT&T`风格的汇编代码，如果大家更熟悉Intel风格，可以在命令行加上参数 `-masm=intel` ,这样gcc就会生成**Intel风格**的汇编代码了。不过**gcc的内联汇编**只支持`AT&T`风格，大家还是找找资料学学AT&T风格吧。
 
-# 汇编: 从汇编代码生成机器码
+# 汇编: 从汇编代码生成机器码(目标文件)
 
 从 `.c` C源码生成:
 
@@ -286,9 +286,13 @@ yum install binutils
 
 ### 
 
-为了避免我们的描述过于枯燥，我们还是以C语言为例吧。想必大家通过我们在上篇中的描述，已经知道**C代码编译后的目标文件**了吧。**目标文件**最终要和**标准库**进行**链接**生成**最后的可执行文件**。那么，标准库和我们生成的目标文件是什么关系呢？
+为了避免我们的描述过于枯燥，我们还是以C语言为例吧。
 
-其实，任何一个程序，它的背后都有一套庞大的代码在支撑着它，以使得该程序能够正常运行。这套代码至少包括**入口函数**、以及其**所依赖的函数**构成的**函数集合**。当然，它还包含了各种标准库函数的实现。
+想必大家通过我们在上篇中的描述，已经知道C代码编译后的目标文件了吧。
+
+**目标文件**最终要和**标准库**进行**链接**生成**最后的可执行文件**。那么，标准库和我们生成的目标文件是什么关系呢？
+
+其实，任何一个程序，它的背后都有**一套庞大的代码**在支撑着它，以使得该程序能够正常运行。**这套代码**至少包括**入口函数**、以及其**所依赖的函数**构成的**函数集合**。当然，它还包含了各种标准库函数的实现。
 
 这个“支撑模块”就叫做**运行时库**（`Runtime Library`）。而C语言的运行库，即被称为`C运行时库（CRT`）。
 
