--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -271,7 +271,11 @@ yum install binutils
 
 首先，什么是链接？我们引用CSAPP的定义：`链接（linking）`是将各种**代码**和**数据**部分收集起来并**组合成为一个单一文件**的过程，这个文件可被加载（或被拷贝）到存储器并执行。
 
-需要强调的是，**链接**可以执行于**编译时**（compile time），也就是在**源代码**被翻译成**机器代码**时；也可以执行于**加载时**，也就是在程序被加载器（`loader`）加载到存储器并执行时；甚至执行于**运行时**（run time），由应用程序来执行。
+需要强调的是，**链接**
+
+- 可以执行于**编译时**（compile time），也就是在**源代码**被翻译成**机器代码**时；
+- 也可以执行于**加载时**，也就是在程序被加载器（`loader`）加载到存储器并执行时；
+- 甚至执行于**运行时**（run time），由应用程序来执行。
 
 ### 了解链接的用处
 
@@ -284,7 +288,7 @@ yum install binutils
 5. 理解链接将使你能够利用共享库。
 6. ……
 
-### 
+### 运行时库CRT
 
 为了避免我们的描述过于枯燥，我们还是以C语言为例吧。
 
@@ -292,7 +296,7 @@ yum install binutils
 
 **目标文件**最终要和**标准库**进行**链接**生成**最后的可执行文件**。那么，标准库和我们生成的目标文件是什么关系呢？
 
-其实，任何一个程序，它的背后都有**一套庞大的代码**在支撑着它，以使得该程序能够正常运行。**这套代码**至少包括**入口函数**、以及其**所依赖的函数**构成的**函数集合**。当然，它还包含了各种标准库函数的实现。
+其实，任何一个程序，它的背后都有**一套庞大的代码**在支撑着它，以使得该程序能够正常运行。**这套代码**至少包括**入口函数**、以及其**所依赖的函数**构成的**函数集合**。当然，它还包含了各种**标准库函数的实现**。
 
 这个“支撑模块”就叫做**运行时库**（`Runtime Library`）。而C语言的运行库，即被称为`C运行时库（CRT`）。
 
