--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -310,13 +310,13 @@ yum install binutils
 
 既然C语言提供了**标准库函数**供我们使用，那么以**什么形式提供**呢？**源代码**吗？当然**不是**了。下面我们引入**静态链接库**的概念。
 
-我们几乎**每一次写程序**都难免去**使用库函数**，那么**每一次去编译！！！** 岂不是太麻烦了。干嘛不把**标准库函数提前编译好**，需要的时候**直接链接**呢？我很负责任的说，我们就是这么做的。
+我们几乎**每一次写程序**都难免去**使用库函数**，那么**每一次去编译！！！** 岂不是**太麻烦**了。干嘛不把**标准库函数提前编译好！！！**，需要的时候**直接链接！！！** 呢？我很负责任的说，我们就是这么做的。
 
 那么，**标准库**以**什么形式**存在呢？一个目标文件？我们知道，**链接的最小单位**就是**一个个目标文件**，如果我们**只用**到一个**printf函数**，就需要和**整个库链接**的话岂不是**太浪费资源**了么？但是，如果把**库函数**分别定义在彼此**独立的代码文件**里，这样编译出来的可是**一大堆目标文件**，有点混乱吧？
 
-所以，**编辑器系统**提供了**一种机制**，将**所有的编译出来的目标文件**打包成**一个单独的文件**，叫做`静态库（static library）`。
+所以，**编辑器系统**提供了**一种机制**，将**所有！！！的编译出来的目标文件**打包成**一个单独的文件！！！**，叫做`静态库（static library）`。
 
-当**链接器**和**静态库链接**的时候，**链接器**会从**这个打包的文件**中“**解压缩**”出**需要的部分目标文件**进行**链接**。这样就解决了资源浪费的问题。
+当**链接器**和**静态库链接**的时候，**链接器**会从**这个打包的文件**中“**解压缩**”出**需要的！！！部分目标文件**进行**链接**。这样就解决了资源浪费的问题。
 
 Linux/Unix系统下`ANSI C`的库名叫做`libc.a`，另外**数学函数**单独在`libm.a`库里。**静态库**采用一种称为`存档（archive）`的**特殊文件格式**来**保存**。其实就是**一个目标文件的集合**，**文件头**描述了**每个成员目标文件**的**位置**和**大小**。
 
