--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -316,15 +316,58 @@ yum install binutils
 
 所以，**编辑器系统**提供了**一种机制**，将**所有！！！的编译出来的目标文件**打包成**一个单独的文件！！！**，叫做`静态库（static library）`。
 
-当**链接器**和**静态库链接**的时候，**链接器**会从**这个打包的文件**中“**解压缩**”出**需要的！！！部分目标文件**进行**链接**。这样就解决了资源浪费的问题。
+当**链接器**和**静态库链接**的时候，**链接器**会从**这个打包的文件**中“**解压缩**”出**需要的！！！部分目标文件**进行**链接**。这样就解决了**资源浪费**的问题。
 
 Linux/Unix系统下`ANSI C`的库名叫做`libc.a`，另外**数学函数**单独在`libm.a`库里。**静态库**采用一种称为`存档（archive）`的**特殊文件格式**来**保存**。其实就是**一个目标文件的集合**，**文件头**描述了**每个成员目标文件**的**位置**和**大小**。
 
-## 例子
+## 静态库例子
 
-光说不练是假把式，我们自己做个静态库试试。为了简单起见我们就做一个只有两个函数的私有库吧。
+光说不练是假把式，我们自己做个静态库试试。为了简单起见我们就做一个**只有两个函数**的私有库吧。
 
-我们在swap.c里定义一个swap函数，在add.c里定义了一个add函数。最后还有含有它们声明的calc.h头文件。
+我们在`swap.c`里定义一个`swap函数`，在`add.c`里定义了一个`add函数`。最后还有含有它们声明的`calc.h`头文件。
+
+```cpp
+// swap.c
+void swap(int *num1, int *num2)
+{
+    int tmp = *num1;
+    *num1 = *num2;
+    *num2 = tmp;
+}
+```
+
+```cpp
+// add.c
+int add(int a, int b)
+{
+    return a + b;
+}
+```
+
+```cpp
+// calc.h
+#ifndef CALC_H_
+#define CALC_H_
+
+#ifdef _cplusplus
+extern "C"
+{
+#endif
+
+void swap(int *, int *);
+int add(int, int);
+
+#ifdef _cplusplus
+}
+#endif
+
+#endif // CALC_H_
+```
+
+我们分别编译它们得到了`swap.o`和`add.o`这两个目标文件，最后使用**ar命令**将其打包为一个静态库。
+
+
+
 
 # 参考
 
