--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -366,8 +366,17 @@ int add(int, int);
 
 我们分别编译它们得到了`swap.o`和`add.o`这两个目标文件，最后使用**ar命令**将其打包为一个静态库。
 
+```
+# gcc add.c -c -o add.o
+# gcc swap.c -c -o swap.o
+# ar rcs libcalc.a swap.o add.o
+```
 
+现在我们怎么使用这个静态库呢？我们写一个`test.c`使用这个库中的**swap函数**吧。
 
+```
+
+```
 
 # 参考
 
