--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -374,9 +374,30 @@ int add(int, int);
 
 现在我们怎么使用这个静态库呢？我们写一个`test.c`使用这个库中的**swap函数**吧。
 
+```cpp
+#include <stdio.h>
+#include "calc.h"
+
+int main(void)
+{
+	int a = 1, b=2;
+	swap(&a, &b);
+	printf("%d %d\n", a, b);
+	return 0;
+}
 ```
 
+编译执行，命令行执行`gcc test.c ./libcalc.a -o test`编译
+
 ```
+[root@lihaiwei cpptest]# gcc test.c ./libcalc.a -o test
+[root@lihaiwei cpptest]# ./test
+2 1
+```
+
+可能你会问，我们使用C语言标准库的时候，编译并不需要加什么库名啊。是的，我们不需要。因为标准库已经是标准了，所以会被默认链接。不过因为数学函数库libm.a没有默认链接，所以我们使用了数学函数的代码在编译时需要在命令行指定 -lm 链接（-l是制定链接库，m是去掉lib之后的库名），不过现在好多gcc都默认链接libm.c库了，比如我机子上的gcc 4.6.3会默认链接的。
+
+
 
 # 参考
 
