--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -395,8 +395,27 @@ int main(void)
 2 1
 ```
 
-可能你会问，我们使用C语言标准库的时候，编译并不需要加什么库名啊。是的，我们不需要。因为标准库已经是标准了，所以会被默认链接。不过因为数学函数库libm.a没有默认链接，所以我们使用了数学函数的代码在编译时需要在命令行指定 -lm 链接（-l是制定链接库，m是去掉lib之后的库名），不过现在好多gcc都默认链接libm.c库了，比如我机子上的gcc 4.6.3会默认链接的。
+可能你会问，我们使用**C语言标准库**的时候，**编译**并**不需要加什么库名**啊。是的，我们不需要。因为**标准库已经是标准**了，所以会**被默认链接**。不过因为**数学函数库libm.a没有默认链接**，所以我们**使用了数学函数的代码**在**编译**时需要在命令行指定 `-lm` 链接（`-l`是**制定链接库**，`m`是**去掉lib之后的库名**），不过现在**好多gcc**都**默认链接libm.c库**了，比如我机子上的gcc 4.6.3会默认链接的。
 
+## 动态链接库/共享库
+
+正如我们所看到的，静态链接库解决了一些问题，但是它同时带来了另一些问题。
+
+比如说
+
+- **每一个**使用了**相同的C标准函数的程序**都需要和**相关目标文件进行链接**，**浪费磁盘空间**；
+- 当一个程序有**多个副本执行**时，**相同的库代码**部分**被载入内存**，**浪费内存**；
+- 当**库代码更新**之后，**使用这些库的函数**必须**全部重新编译**……
+
+有更好的办法吗？当然有。我们接下来引入**动态链接库/共享库**（`shared library`）。
+
+动态链接库/共享库是一个目标模块，在运行时可以加载到任意的存储器地址，并和一个正在运行的程序链接起来。这个过程就是动态链接（dynamic linking），是由一个叫做动态链接器（dynamic linker）的程序完成的。
+
+Unix/Linux中共享库的后缀名通常是.so（微软那个估计大家很熟悉，就是DLL文件）。怎么建立一个动态链接库呢？
+
+我们还是以上面的代码为例，我们先删除之前的静态库和目标文件。首先是建立动态链接库，我们执行gcc swap.c add.c -shared -o libcalc.so 就可以了，就这么简单（微软那个有所区别，我们在这里只为说明概念，有兴趣的同学请自行搜索）。
+
+顺便说一下，最好在gcc命令行加上一句-fPIC让其生成与位置无关的代码（PIC），具体原因超出本文范围，故不予讨论。
 
 
 # 参考
