--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -320,7 +320,7 @@ yum install binutils
 
 Linux/Unix系统下`ANSI C`的库名叫做`libc.a`，另外**数学函数**单独在`libm.a`库里。**静态库**采用一种称为`存档（archive）`的**特殊文件格式**来**保存**。其实就是**一个目标文件的集合**，**文件头**描述了**每个成员目标文件**的**位置**和**大小**。
 
-## 静态库例子
+### 静态库例子
 
 光说不练是假把式，我们自己做个静态库试试。为了简单起见我们就做一个**只有两个函数**的私有库吧。
 
@@ -397,7 +397,7 @@ int main(void)
 
 可能你会问，我们使用**C语言标准库**的时候，**编译**并**不需要加什么库名**啊。是的，我们不需要。因为**标准库已经是标准**了，所以会**被默认链接**。不过因为**数学函数库libm.a没有默认链接**，所以我们**使用了数学函数的代码**在**编译**时需要在命令行指定 `-lm` 链接（`-l`是**制定链接库**，`m`是**去掉lib之后的库名**），不过现在**好多gcc**都**默认链接libm.c库**了，比如我机子上的gcc 4.6.3会默认链接的。
 
-## 动态链接库/共享库
+### 动态链接库/共享库
 
 正如我们所看到的，静态链接库解决了一些问题，但是它同时带来了另一些问题。
 
@@ -409,7 +409,7 @@ int main(void)
 
 有更好的办法吗？当然有。我们接下来引入**动态链接库/共享库**（`shared library`）。
 
-动态链接库/共享库是一个目标模块，在运行时可以加载到任意的存储器地址，并和一个正在运行的程序链接起来。这个过程就是动态链接（dynamic linking），是由一个叫做动态链接器（dynamic linker）的程序完成的。
+**动态链接库/共享库**是一个**目标模块**，在**运行时**可以加载到**任意的存储器地址**，并**和一个正在运行的程序链接起来**。这个过程就是动态链接（dynamic linking），是由一个叫做动态链接器（dynamic linker）的程序完成的。
 
 Unix/Linux中共享库的后缀名通常是.so（微软那个估计大家很熟悉，就是DLL文件）。怎么建立一个动态链接库呢？
 
