--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -409,7 +409,7 @@ int main(void)
 
 有更好的办法吗？当然有。我们接下来引入**动态链接库/共享库**（`shared library`）。
 
-**动态链接库/共享库**是一个**目标模块**，在**运行时**可以加载到**任意的存储器地址**，并**和一个正在运行的程序链接起来**。这个过程就是动态链接（dynamic linking），是由一个叫做动态链接器（dynamic linker）的程序完成的。
+**动态链接库/共享库**是一个**目标模块**，在**运行时**可以加载到**任意的存储器地址**，并**和一个正在运行的程序链接起来**。这个过程就是**动态链接**（`dynamic linking`），是由一个叫做**动态链接器**（`dynamic linker）的程序完成的。
 
 Unix/Linux中共享库的后缀名通常是.so（微软那个估计大家很熟悉，就是DLL文件）。怎么建立一个动态链接库呢？
 
