--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -453,7 +453,9 @@ libcalc.so: ELF 64-bit LSB shared object, x86-64, version 1 (SYSV), dynamically 
 
 好处在哪？
 
-第一，库更新之后，只需要替换掉动态库文件即可，无需编译所有依赖库的可执行文件。第二，程序有多个副本执行时，内存中只需要一份库代码，节省空间。
+第一，**库更新**之后，**只**需要**替换掉动态库文件**即可，**无需**编译所有依赖库**的**可执行文件**。
+
+第二，程序有**多个副本执行**时，**内存**中只需要**一份库代码**，节省空间。
 
 大家想想，C语言标准库好多程序都在用，但内存只有一份代码，这样节省的空间很可观吧，而且假如库代码发现bug，只需要更新libc.so即可，所有程序即可使用新的代码，岂不是很Cool。
 
