--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -471,26 +471,52 @@ libcalc.so: ELF 64-bit LSB shared object, x86-64, version 1 (SYSV), dynamically 
 
 首先是地址和空间分配，我们之前提到的**目标文件**其实**全称**叫做**可重定位目标文件**（这只是一种翻译，叫法很多…）。
 
-**目标文件的格式**已经无限度**接近可执行文件**了，Unix/Linux下的**目标文件的格式**叫做**ELF**（`Executable and Linkable Format，可执行连接格式`）。详细的讨论可执行文件的格式超出了本文范围，我们只需要知道可执行文件中代码，数据，符号等内容分别存储在不同的段中就可以了，这也和保护模式下的内存分段是有一定关系的，但是这个又会扯远就不详谈了……
+**目标文件的格式**已经无限度**接近可执行文件**了，Unix/Linux下的**目标文件的格式**叫做**ELF**（`Executable and Linkable Format，可执行连接格式`）。详细的讨论可执行文件的格式超出了本文范围，我们只需要知道**可执行文件**中**代码**，**数据**，**符号**等内容分别**存储在不同的段**中就可以了，这也和**保护模式下的内存分段**是有一定关系的，但是这个又会扯远就不详谈了……
 
-地址和空间分配以及重定位我们简单叙述一下就好，但是符号决议这里我想稍微展开描述一下。
+### 符号决议
 
-什么是符号（symbol）？简单说我们在代码中定义的函数和变量可以统称为符号。符号名（symbol name）就是函数名和变量名了。
+**地址和空间分配**以及**重定位**我们简单叙述一下就好，但是**符号决议**这里我想稍微展开描述一下。
 
-目标文件的拼合其实也就是对目标文件之间相互的符号引用的一个修正。我们知道一个C语言代码文件只要所有的符号被声明过就可以通过编译了，可是对某符号的引用怎么知道位置呢？比如我们调用了printf函数，编译时留下了要填入的函数地址，那么printf函数的实际地址在那呢？这个空位什么时候修正呢？当然是链接的时候，重定位那一步就是做这个的。但是在修改地址之前需要做符号决议，那什么是符号决议呢？正如前文所说，编译期间留下了很多需要重新定位的符号，所以目标文件中会有一块区域专门保存符号表。那链接器如何知道具体位置呢？其实链接器不知道，所以链接器会搜索全部的待链接的目标文件，寻找这个符号的位置，然后修正每一个符号的地址。
+#### 什么是符号
 
-这时候我们可以隆重介绍一个几乎所有人在编译程序的时候会遇见的问题——符号查找问题。这个通常有两种错误形式，即找不到某符号或者符号重定义。
+什么是**符号**（`symbol`）？简单说我们在**代码中**定义的**函数和变量**可以统称为**符号**。**符号名**（`symbol name`）就是**函数名和变量名**了。
 
-首先是找不到符号，比如，当我们声明了一个swap函数却没有定义它的时候，我们调用这个函数的代码可以通过编译，但是在链接期间却会遇到错误。形如“test.c:(.text+0x29): undefined reference to ‘swap’”这样，特别的，MSVC编译器报错是找不到符号_swap。咦？那个下划线哪里来的？这得从C语言刚诞生说起。当C语言刚面世的时候，已经存在不少用汇编语言写好的库了，因为链接器的符号唯一规则，假如该库中存在main函数，我们就不能在C代码中出现main函数了，因为会遭遇符号重定义错误，倘若放弃这些库又是一大损失。所以当时的编译器会对代码中的符号进行修饰（name decoration），C语言的代码会在符号前加下划线，fortran语言在符号前后都加下划线，这样各个目标文件就不会同名了，就解决了符号冲突的问题。随着时间的流逝，操作系统和编译器都被重写了好多遍了，当前的这个问题已经可以无视了。所以新版的gcc一般不会再加下划线做符号修饰了（也可以在编译的命令行加上-fleading-underscore/-fno-fleading-underscore开打开/关闭这个是否加下划线）。而MSVC依旧保留了这个传统，所以我们可以看到_swap这样的修饰。
+#### 符号引用的修正
 
-顺便说一下，符号冲突是很常见的事情，特别是在大型项目的开发中，所以我们需要一个约定良好的命名规则。C++也引入了命名空间来帮助我们解决这些问题，因为C++中存在函数重载这些东西，所以C++的符号修饰更加复杂难懂（Linux下有c++filt命令帮助我们翻译一个被C++编译器修饰过的符号）。
+**目标文件的拼合**其实也就是对**目标文件之间**相互的**符号引用的一个修正**。
 
-说了这么多，该到了我们变成中需要注意的一个大问题了。即存在同名符号时链接器如何处理。不是刚刚说了会报告重名错误吗？怎么又要研究这个？很可惜，不仅仅这么简单。在编译时，编译器会向汇编器输出每个全局符号，分为强（strong）符号和弱符号（weak），汇编器把这个信息隐含的编码在可重定位目标文件的符号表里。其中函数和已初始化过的全局变量是强符号，未初始化的全局变量是弱符号。根据强弱符号的定义，GNU链接器采用的规则如下：
+我们知道一个C语言代码文件**只要所有的符号被声明过**就可以**通过编译**了，可是对某符号的引用**怎么知道位置**呢？
 
-不允许多个强符号
-如果有一个强符号和一个或多个弱符号，则选择强符号
-如果有多个弱符号，则随机选择一个
-好了，就三条，第一条会报符号重名错误的，而后两条默认情况下甚至连警告都不会有。关键就在这里，默认甚至连警告都没有。
+比如我们调用了**printf函数**，**编译**时留下了要**填入的函数地址**，那么printf函数的**实际地址**在那呢？这个**空位什么时候修正**呢？
+
+当然是**链接的时候**，重定位那一步就是做这个的。但是在**修改地址之前**需要做**符号决议**，那什么是符号决议呢？
+
+正如前文所说，**编译期间**留下了很多**需要重新定位的符号**，所以**目标文件**中会有**一块区域专门保存符号表**。那**链接器**如何知道**具体位置**呢？其实**链接器不知道**，所以链接器会**搜索全部的待链接的目标文件**，寻找这个**符号的位置**，然后**修正每一个符号的地址**。
+
+#### 符号查找问题
+
+这时候我们可以隆重介绍一个几乎所有人在编译程序的时候会遇见的问题——**符号查找问题**。这个通常有**两种错误形式**，即**找不到某符号**或者**符号重定义**。
+
+首先是找不到符号，比如，当我们**声明！！！** 了一个**swap函数！！！** 却**没有定义！！！** 它的时候，我们调用这个函数的代码**可以通过编译！！！**，但是在**链接期间！！！** 却会**遇到错误**。形如`“test.c:(.text+0x29): undefined reference to ‘swap’”`这样，特别的，**MSVC编译器**报错是找不到符号`_swap`。
+
+咦？**那个下划线**哪里来的？这得从**C语言**刚诞生说起。当C语言**刚面世**的时候，已经存在不少用**汇编语言写好的库**了，因为**链接器**的**符号唯一规则！！！**，假如该库中存在main函数，我们就不能在C代码中出现main函数了，因为会遭遇**符号重定义错误**，倘若放弃这些库又是一大损失。所以当时的**编译器**会对代码中的**符号**进行**修饰**（`name decoration`），**C语言的代码**会在**符号前加下划线**，**fortran语言**在符号**前后都加下划线**，这样各个目标文件就不会同名了，就解决了符号冲突的问题。随着时间的流逝，操作系统和编译器都被重写了好多遍了，当前的这个问题已经可以无视了。所以**新版的gcc**一般不会再加下划线做符号修饰了（也可以在编译的命令行加上`-fleading-underscore/-fno-fleading-underscore`开**打开/关闭**这个**是否加下划线**）。而MSVC依旧保留了这个传统，所以我们可以看到`_swap`这样的修饰。
+
+顺便说一下，**符号冲突**是**很常见**的事情，特别是在大型项目的开发中，所以我们需要一个**约定良好的命名规则**。`C++`也引入了**命名空间**来帮助我们解决这些问题，因为`C++`中存在函数重载这些东西，所以`C++`的符号修饰更加复杂难懂（Linux下有`c++filt`命令帮助我们翻译一个被`C++`编译器修饰过的符号）。
+
+说了这么多，该到了我们编程中需要注意的一个大问题了。即存在**同名符号**时链接器如何处理。不是刚刚说了会报告**重名错误**吗？怎么又要研究这个？很可惜，不仅仅这么简单。
+
+在**编译**时，**编译器**会向**汇编器**输出**每个全局符号**，分为**强**（`strong`）符号和**弱符号**（weak），汇编器把这个信息**隐含的编码**在**可重定位目标文件的符号表**里。其中
+
+- **函数**和**已初始化过的全局变量**是**强符号**，
+- **未初始化**的**全局变量**是**弱符号**。
+
+根据强弱符号的定义，GNU链接器采用的规则如下：
+
+1. **不允许多个强符号**
+2. 如果有一个强符号和一个或多个弱符号，则选择强符号
+3. 如果有**多个弱符号**，则**随机**选择一个
+
+好了，就三条，**第一条**会报**符号重名错误**的，而后两条默认情况下甚至连警告都不会有。关键就在这里，默认甚至连警告都没有。
 
 我们来个实验具体说一下：
 
@@ -500,24 +526,29 @@ libcalc.so: ELF 64-bit LSB shared object, x86-64, version 1 (SYSV), dynamically 
 
 int n;
 
-int main(int argc, char *argv[])
+int main(void)
 {
-    printf("It is %dn", n);
-
-    return 0;
+	printf("It is %d\n", n);
+	return 0;
 }
 ```
 
-```
+```cpp
 // link2.c
 int n = 5;
 ```
 
 这两个文件编译运行会输出什么呢？聪明的你想必已经知道了吧？没错，就是5。
 
+```
+[root@lihaiwei cpptest]# gcc link2.c link1.c -o link
+[root@lihaiwei cpptest]# ./link
+It is 5
+```
 
+初始化过的n是强符号，被优先选择了.
 
-初始化过的n是强符号，被优先选择了。但是，在很复杂的项目代码，这样的错误很难发现，特别是多线程的……不过当我们怀疑代码中的bug可能是因为此原因引起的时候，我们可以在gcc命令行加上-fno-common这个参数，这样链接器在遇到多重定义的符号时，都会给出一条警告信息，而无关强弱符号。如图所示：
+但是，在**很复杂的项目代码**，这样的错误很难发现，特别是多线程的……不过当我们怀疑代码中的bug可能是因为此原因引起的时候，我们可以在**gcc命令**行加上`-fno-common`这个参数，这样链接器在遇到多重定义的符号时，都会给出一条警告信息，而无关强弱符号。如图所示：
 
 
 
