--- Auto-Git Commit ---

--- a/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/2. 计算机启动过程、GRUB 以及 multiboot 标准.md
+++ b/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/2. 计算机启动过程、GRUB 以及 multiboot 标准.md
@@ -1,12 +1,5 @@
----
-layout: post
-title: hurlex <二> 计算机启动过程、GRUB 以及 multiboot 标准
-category: hurlex
----
 
-
-GRUB的全称是GRand Unified
-Bootloader，是一个多重操作系统启动管理器，用来引导不同的操作系统。Linuxer和喜欢折腾多系统的读者们想必对GRUB并不陌生吧？但是在详细描述GRUB之前，我们得先来简述一下操作系统的启动过程。本着别人写过的我们就不写的原则，我推荐来自阮一峰博客的一篇文章给大家《计算机是如何启动的？》。
+GRUB的全称是GRand Unified Bootloader，是一个多重操作系统启动管理器，用来引导不同的操作系统。Linuxer和喜欢折腾多系统的读者们想必对GRUB并不陌生吧？但是在详细描述GRUB之前，我们得先来简述一下操作系统的启动过程。本着别人写过的我们就不写的原则，我推荐来自阮一峰博客的一篇文章给大家《计算机是如何启动的？》。
 [^1]
 
 看过这篇文章之后，想必大家已经在宏观上对计算机的启动过程有了初步的了解。接下来我们细化这个过程，并且着重阐述其中和本项目相关的内容。一直没有说明的是，我们的目标内核是32位的。因为我们只是原理学习，64位繁杂的细节会使得整个项目难度加大，这是我不愿意看到的。
