--- Auto-Git Commit ---

--- a/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/2. 计算机启动过程、GRUB 以及 multiboot 标准.md
+++ b/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/2. 计算机启动过程、GRUB 以及 multiboot 标准.md
@@ -1,11 +1,11 @@
 
-GRUB的全称是GRand Unified Bootloader，是一个多重操作系统启动管理器，用来引导不同的操作系统。Linuxer和喜欢折腾多系统的读者们想必对GRUB并不陌生吧？但是在详细描述GRUB之前，我们得先来简述一下操作系统的启动过程。本着别人写过的我们就不写的原则，我推荐来自阮一峰博客的一篇文章给大家《计算机是如何启动的？》。
-[^1]
+GRUB的全称是GRand Unified Bootloader，是一个多重操作系统启动管理器，用来引导不同的操作系统。
 
-看过这篇文章之后，想必大家已经在宏观上对计算机的启动过程有了初步的了解。接下来我们细化这个过程，并且着重阐述其中和本项目相关的内容。一直没有说明的是，我们的目标内核是32位的。因为我们只是原理学习，64位繁杂的细节会使得整个项目难度加大，这是我不愿意看到的。
-[^2]
+我们得先来简述一下操作系统的启动过程。参见`Linux/Boot/`下内容.
 
-我们先来一起复习计算机原理之类的课程中对于CPU寻址的一些概念吧。首先，我们的内核使用32位的地址总线来寻址，所以能编址出2的32次方，也就是4G的地址空间。那么第一个问题是，这4G的空间指向哪里？我想大多数读者的第一反应都是内存吧？我们知道在主板上除了内存还有BIOS、显卡、声卡、网卡[^3]等外部设备，CPU需要和这些外设进行通信。那么实现通信自然就得有地址，不然怎么表示数据的去向呢？比如显卡内部就有自己的一些存储单元[^4]。在x86下，当需要访问这些存储单元的时候，就需要给予不同的访问地址来区分每一个读写单元。
+我们的目标内核是32位的。因为我们只是原理学习。
+
+我们先来一起复习计算机原理之类的课程中对于CPU寻址的一些概念吧。首先，我们的内核使用32位的地址总线来寻址，所以能编址出2的32次方，也就是4G的地址空间。那么第一个问题是，这4G的空间指向哪里？我想大多数读者的第一反应都是内存吧？我们知道在主板上除了内存还有BIOS、显卡、声卡、网卡等**外部设备**，CPU需要和这些外设进行通信。那么实现通信自然就得有地址，不然怎么表示数据的去向呢？比如显卡内部就有自己的一些存储单元[^4]。在x86下，当需要访问这些存储单元的时候，就需要给予不同的访问地址来区分每一个读写单元。
 
 说到这里，我们需要引出两个专业名词：端口统一编址和端口独立编址。还记得我们刚说的4G地址空间吗？所谓的端口统一编址就是把所有和外设存储单元对应的端口直接编址在这4G的地址空间里，当我们对某一个地址进行访问的时候实际上是在访问某个外设的存储单元。而端口独立编址就是说这些端口没有编址在地址空间里，而是另行独立编址。而x86架构部分的采用了端口独立编址，又部分的采用了端口统一编址。部分外设的部分存储单元直接可以通过某个内存地址访问，而其他部分在一个独立的端口地址空间中，需要使用in/out指令去访问，我们用到的时候再来细说。
 
@@ -27,15 +27,7 @@ Test，上电自检）过程了，BIOS对计算机各个部件开始初始化，
 听起来很不错吧？那么问题是怎么能让GRUB加载这个小内核呢？答案是GRUB提供的multiboot规范。这份规范是描述如何构造出一个能够被GRUB识别，并且按照我们定义的规则去加载的操作系统内核。目的很明确吧？具体的协议在网上很容易检索到，也有不少中文版本的翻译，所以我不再详细解释这个协议。希望对这个协议陌生的读者们先去网上得到一份具体的说明，仔细的阅读一遍后再阅读下一章节。在下一章节中，我们将自己动手构建出一个可以运行的“Hello,
 kernel OS”程序，拭目以待吧。
 
-[^1]: 地址在 [http://www.ruanyifeng.com/blog/2013/02/booting.html](http://www.ruanyifeng.com/blog/2013/02/booting.html)
 
-[^2]: 其实你可以理解为我压根就不懂64位，所以不敢过多谈论。
-
-[^3]: 这里就原谅我使用这些不专业的词汇吧。
-
-[^4]: 甚至还有独立的GPU，我们这个简单的内核不用关注这个。
-
-[^5]: 当然了，设计BIOS的程序员可以在这里大显身手。
 
 [^6]: 对这个地址有疑问的话，请参考《Intel IA-32 Intel Architecture Software Developer’s Manual Volume 3:System Programming Guide Section》的9.1.4 章节。或者参考我博客的一篇文章《基于Intel 80×86CPU的IBM PC及其兼容计算机的启动流程》，地址是：[http://www.0xffffff.org/?p=310](http://www.0xffffff.org/?p=310)
 P.S. 古老的8086处理器是0xFFFF0这个地址。
