--- a/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
+++ b/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
@@ -1,19 +1,15 @@
----
-layout: post
-title: hurlex <三> 裸机上运行的 Hello OS Kernel
-category: hurlex
----
 
-不知道前两章的文字大家看烦了没有？除了第一章还有简单的动手任务之外，之后都是无聊的文字描述了。嘿嘿，必要的铺垫还是得有的，虽然以后大段的概念依然少不了，但是从本章开始，我们就要开始进入实战阶段了。
+从本章开始，我们就要开始进入实战阶段了。
 
-Makefile和ld脚本的简单解释
---------------------------
+# Makefile和ld脚本的简单解释
 
 我们先简单的解释一下之前的Makefile和ld链接脚本的一些字段，如果你已经掌握了，那大致浏览下就可以跳过这段文字了。
 
 先来看Makefile中关于gcc编译参数的这一行:
 
-	C_FLAGS = -c -Wall -m32 -ggdb -gstabs+ -nostdinc -fno-builtin -fno-stack-protector -I include
+```
+C_FLAGS = -c -Wall -m32 -ggdb -gstabs+ -nostdinc -fno-builtin -fno-stack-protector -I include
+```
 
 我们只解释以下重要的几个参数:
 
