--- Auto-Git Commit ---

--- a/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
+++ b/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
@@ -5,18 +5,17 @@
 
 我们先简单的解释一下之前的Makefile和ld链接脚本的一些字段，如果你已经掌握了，那大致浏览下就可以跳过这段文字了。
 
-先来看Makefile中关于gcc编译参数的这一行:
+先来看**Makefile**中关于**gcc编译参数**的这一行:
 
-```
+```makefile
 C_FLAGS = -c -Wall -m32 -ggdb -gstabs+ -nostdinc -fno-builtin -fno-stack-protector -I include
 ```
 
 我们只解释以下重要的几个参数:
 
--   -m32
-    是生成32位代码，这样的话我们的开发环境也可以使用64位的Linux系统。
+-   `-m32` 是生成**32位代码**，这样的话我们的开发环境也可以使用64位的Linux系统。
 
--   -ggdb 和-gstabs+ 是添加相关的调试信息，调试对后期的排错很重要。
+-   `-ggdb` 和`-gstabs+ 是添加相关的调试信息，调试对后期的排错很重要。
 
 -   -nostdinc 是不包含C语言的标准库里的头文件。[^1]
 
