--- a/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
+++ b/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
@@ -13,15 +13,15 @@ C_FLAGS = -c -Wall -m32 -ggdb -gstabs+ -nostdinc -fno-builtin -fno-stack-protect
 
 我们只解释以下重要的几个参数:
 
--   `-m32` 是生成**32位代码**，这样的话我们的开发环境也可以使用64位的Linux系统。
+- `-m32` 是生成**32位代码**，这样的话我们的开发环境也可以使用64位的Linux系统。
 
--   `-ggdb` 和`-gstabs+ 是添加相关的调试信息，调试对后期的排错很重要。
+- `-ggdb` 和`-gstabs+` 是添加相关的**调试信息**，调试对后期的排错很重要。
 
--   -nostdinc 是不包含C语言的标准库里的头文件。[^1]
+- `-nostdinc` 是**不包含C语言的标准库**里的头文件。因为那些库函数都是在特定操作系统平台之上的实现，而我们要做的正是实现这样一个平台，所以想用C语言库的话就需要自己实现.
 
--   -fno-builtin 是要求gcc不主动使用自己的内建函数，除非显式声明。 [^2]
+- `-fno-builtin` 是要求gcc不主动使用自己的内建函数，除非显式声明。gcc有很多内建函数用来替换一些C语言的库函数以提升效率，比如把只有一个字符串参数的printf函数替换为puts函数。
 
--   -fno-stack-protector 是不使用栈保护等检测。
+- `-fno-stack-protector` 是不使用栈保护等检测。
 
 接着是ld链接命令的参数:
 
