--- a/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
+++ b/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
@@ -19,21 +19,23 @@ C_FLAGS = -c -Wall -m32 -ggdb -gstabs+ -nostdinc -fno-builtin -fno-stack-protect
 
 - `-nostdinc` 是**不包含C语言的标准库**里的头文件。因为那些库函数都是在特定操作系统平台之上的实现，而我们要做的正是实现这样一个平台，所以想用C语言库的话就需要自己实现.
 
-- `-fno-builtin` 是要求gcc不主动使用自己的内建函数，除非显式声明。gcc有很多内建函数用来替换一些C语言的库函数以提升效率，比如把只有一个字符串参数的printf函数替换为puts函数。
+- `-fno-builtin` 是要求**gcc不主动使用自己的内建函数**，除非显式声明。gcc有很多**内建函数**用来**替换**一些C语言的**库函数**以提升效率，比如把只有一个字符串参数的printf函数替换为puts函数。
 
 - `-fno-stack-protector` 是不使用栈保护等检测。
 
-接着是ld链接命令的参数:
+接着是**ld链接命令的参数**:
 
+```makefile
+LD_FLAGS = -T scripts/kernel.ld -m elf_i386 -nostdlib
+```
 
-	LD_FLAGS = -T scripts/kernel.ld -m elf_i386 -nostdlib
+- `-T scripts/kernel.ld` 是**使用我们自己的链接器脚本**。
 
--   -T scripts/kernel.ld 是使用我们自己的链接器脚本。
+- `-m elf\_i386` 是生成**i386平台**下的**ELF格式**的可执行文件，这是Linux下的可执行文件格式。
 
--   -m elf\_i386
-    是生成i386平台下的ELF格式的可执行文件，这是Linux下的可执行文件格式。
+- `-nostdlib` 是**不链接C语言的标准库**，原因上文已经交代过了。
 
--   -nostdlib 是不链接C语言的标准库，原因上文已经交代过了。
+# ld脚本
 
 接下来讨论链接器脚本。
 
