--- a/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
+++ b/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
@@ -39,7 +39,7 @@ LD_FLAGS = -T scripts/kernel.ld -m elf_i386 -nostdlib
 
 接下来讨论链接器脚本。
 
-我们知道**一个可执行的文件**大致由**代码段**和**数据段**组成，但是操作系统怎么正确加载它呢？事实上**可执行文件**有义务向**操作系统**提供**代码段**和**数据段位置等信息**，以便操作系统正确找到它的代码段和数据段并加载执行。通常这个信息被统一组织放置在可执行文件的头部区域。不同的操作系统中自然就设计了不同的组织方式，比如Linux常见的ELF(Executable and Linkable Format，可执行链接格式)格式，windows下常见的PE(Portable Executable，可移植的可执行文件)格式都是。[^3]而ld支持很多种链接格式，我们可以在参数里指定。那为何选择ELF格式呢？原因很简单，因为GRUB可以检测识别出ELF格式的可执行文件，并且能找到相关的代码段和数据段的位置信息，从而正确的把我们的内核加载到正确的位置上去。
+我们知道**一个可执行的文件**大致由**代码段**和**数据段**组成，但是操作系统怎么正确加载它呢？事实上**可执行文件**有义务向**操作系统**提供**代码段**和**数据段位置等信息**，以便**操作系统**正确**找到**它的**代码段**和**数据段**并加载执行。通常这个信息被**统一组织**放置在**可执行文件的头部区域**。不同的操作系统中自然就设计了不同的组织方式，比如Linux常见的ELF(Executable and Linkable Format，可执行链接格式)格式，windows下常见的PE(Portable Executable，可移植的可执行文件)格式都是。[^3]而ld支持很多种链接格式，我们可以在参数里指定。那为何选择ELF格式呢？原因很简单，因为GRUB可以检测识别出ELF格式的可执行文件，并且能找到相关的代码段和数据段的位置信息，从而正确的把我们的内核加载到正确的位置上去。
 
 看懂了这个Makefile和链接器脚本，我们就向成功迈出了一大步了。大家还记得上一章谈过的GRUB
 Multiboot标准吗？只要按照标准生成规范的Multiboot引导信息，同时使用标准的ELF格式，GRUB就能把我们的内核正确的加载和执行了。
