--- Auto-Git Commit ---

--- a/Hided/Operating System/Learning/Orange's: 一个操作系统的实现/上篇/第1章 马上动手写一个最小的操作系统/2. 十分钟完成的操作系统.md
+++ b/Hided/Operating System/Learning/Orange's: 一个操作系统的实现/上篇/第1章 马上动手写一个最小的操作系统/2. 十分钟完成的操作系统.md
@@ -28,7 +28,7 @@ dw 	0xaa55				    ; 结束标志
 nasm boot.asm -o boot
 ```
 
-我们就得到了一个512字节的boot，让我们使用软盘绝对扇区读写工具将这个文件写到一张空白软盘的第一个扇区。
+我们就得到了一个**512字节的boot**，让我们使用**软盘绝对扇区读写工具**将这个文件写到**一张空白软盘**的**第一个扇区**。
 
 在Linux下可以这样做
 
