--- a/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
+++ b/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
@@ -55,11 +55,11 @@ LD_FLAGS = -T scripts/kernel.ld -m elf_i386 -nostdlib
 
 解决了理论上的问题之后，我们来解决一个现实的问题。这个问题是，这个小内核放在哪里？虚拟机是它运行的场所，那么**虚拟磁盘**自然就是安放内核的选择了。不过我们这次**不选择硬盘**，而是选择已经几乎消失殆尽的**1.44MB的软盘**。为什么？说实话是因为比较简单。
 
-在Linux下制作一个**1.44MB软盘**的技术太简单了，甚至**dd命令**也可以做一个出来。不过在这个**软盘镜像**上安装一个**GRUB**稍有难度，所以大家直接可以使用我提供的已经安装好了GRUB的软盘镜像。
+在Linux下制作一个**1.44MB软盘**的技术太简单了，甚至**dd命令**也可以做一个出来。不过在这个**软盘镜像**上安装一个**GRUB**稍有难度，所以大家直接可以使用我提供的已经**安装好了GRUB的软盘镜像**。
 
 大家准备好镜像了吗？OK！万事俱备，只欠代码了。让我们开始最激动人心的探索吧!
 
-抱歉，我又得打断一下。因为必须引入一个新的术语名词——文件系统。什么是文件系统呢？其实简单的说，这里所谓的文件系统指的是操作系统用于明确磁盘或分区上的文件存储的方法和数据结构，即在磁盘上组织文件的方法。如果把这个1.44MB的软盘可以看做一个巨大的数组，那么每个数组成员都是一个扇区，拥有512字节的存储单元。现在需要往这个软盘上写入文件，那么自然需要一套合适的管理规则，否则的话岂不是全乱套了？就和这篇文档一样，不同的章节被划分在不同的位置，同时在最前面有所有章节的目录，这就是一种对信息的组织方式，文件系统也不过是这么一套组织策略罢了。[^8]
+抱歉，我又得打断一下。因为必须引入一个新的术语名词——**文件系统**。什么是文件系统呢？其实简单的说，这里所谓的文件系统指的是**操作系统**用于明确**磁盘或分区**上的**文件存储的方法和数据结构**，即在磁盘上组织文件的方法。如果把这个**1.44MB的软盘**可以看做一个**巨大的数组**，那么**每个数组成员**都是**一个扇区**，拥有512字节的存储单元。现在需要**往这个软盘上写入文件**，那么自然需要一套合适的管理规则，否则的话岂不是全乱套了？就和这篇文档一样，不同的章节被划分在不同的位置，同时在最前面有所有章节的目录，这就是一种对信息的组织方式，文件系统也不过是这么一套组织策略罢了。
 
 考虑到兼容因素，自然是选择目前使用的比较广泛的文件系统了，这样的话也便于我们对软盘里面存储的文件进行管理操作。[^9]那么使用什么文件系统呢？软盘一般使用的是FAT12文件系统，所以我们也就不标新立异了。这个文件系统也很简单，后期大家有兴趣的话甚至可以在我们的内核里实现能处理这个文件系统的代码。至于FAT12文件系统的资料也很多，我就不详细说了。[^10]GRUB支持从很多常见的文件系统中去读取和载入内核文件，当然也包括我们使用的FAT12格式。我们在自己开发使用的Linux系统上很容易就可以挂载和读写这个虚拟软盘里的文件，这给开发带来了极大的便利。我们经常做的事就是拷贝编译好的内核进去，然后在虚拟机运行。另外这个虚拟软盘文件里还有GRUB和它的配置文件，我提供的软盘镜像里安装的是一个很早的GRUB版本，它的配置文件简单到一看就懂。[^11]所以大家完全可以自己看着修改。[^12]
 
