--- Auto-Git Commit ---

--- a/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
+++ b/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
@@ -53,6 +53,10 @@ LD_FLAGS = -T scripts/kernel.ld -m elf_i386 -nostdlib
 
 # 启动镜像的制作
 
+为了开发这样的操作系统，我们准备按照如下的步骤来进行。
+
+![2020-02-08-17-10-11.png](./images/2020-02-08-17-10-11.png)
+
 解决了理论上的问题之后，我们来解决一个现实的问题。这个问题是，这个小内核放在哪里？虚拟机是它运行的场所，那么**虚拟磁盘**自然就是安放内核的选择了。不过我们这次**不选择硬盘**，而是选择已经几乎消失殆尽的**1.44MB的软盘**。为什么？说实话是因为比较简单。
 
 在Linux下制作一个**1.44MB软盘**的技术太简单了，甚至**dd命令**也可以做一个出来。不过在这个**软盘镜像**上安装一个**GRUB**稍有难度，所以大家直接可以使用我提供的已经**安装好了GRUB的软盘镜像**。
