--- a/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
+++ b/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
@@ -57,6 +57,16 @@ LD_FLAGS = -T scripts/kernel.ld -m elf_i386 -nostdlib
 
 ![2020-02-08-17-10-11.png](./images/2020-02-08-17-10-11.png)
 
+>
+>1. 源码程序, 为了生成机器码所写的程序代码。可通过**编译器编译**成**机器语言**。
+>2. CPU能够直接理解的语言，由二进制的0和1构成。其实源代码也是由 0和1构成的.
+
+也就是说，所谓**开发操作系统**，就是想办法**制作一张**“`含有操作系统的，能够自动启动的磁盘`”。
+
+这里出现的“**映像文件**”一词，简单地说就是**软盘的备份数据**。我们想要把特定的内容写入磁盘可不是拿块磁铁来在磁盘上晃晃就可以的。所以我们要先做出备份数据，然后将这些备份数据写入磁盘，这样才能做出符合我们要求的磁盘。”
+
+Excerpt From: 川合秀实. “30天自制操作系统 (图灵程序设计丛书).” Apple Books. 
+
 解决了理论上的问题之后，我们来解决一个现实的问题。这个问题是，这个小内核放在哪里？虚拟机是它运行的场所，那么**虚拟磁盘**自然就是安放内核的选择了。不过我们这次**不选择硬盘**，而是选择已经几乎消失殆尽的**1.44MB的软盘**。为什么？说实话是因为比较简单。
 
 在Linux下制作一个**1.44MB软盘**的技术太简单了，甚至**dd命令**也可以做一个出来。不过在这个**软盘镜像**上安装一个**GRUB**稍有难度，所以大家直接可以使用我提供的已经**安装好了GRUB的软盘镜像**。
