--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/1. 环境及工具.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/1. 环境及工具.md
@@ -85,7 +85,7 @@ EPT enable指示EPT映射机制已经开启.
 
 虚拟化引擎选择"虚拟化Intel VT-x/EPT或AMD-V/RVI(V)". 首选模式选为"intel VT-x/EPT或AMD-V/RVI". 这才能在VMware中使用VMX模式.
 
-在VMware中, 我们使用软盘映像文件demo.img, 这个映像文件位于每个例子目录中. 例如1-4图中的chap07/ex7-5/demo.img.
+在VMware中, 我们使用`软盘映像文件demo.img`, 这个映像文件位于每个例子目录中. 例如1-4图中的chap07/ex7-5/demo.img.
 
 ![2019-12-28-18-29-28.png](./images/2019-12-28-18-29-28.png)
 
