--- Auto-Git Commit ---

--- a/Hided/Operating System/Learning/Orange's: 一个操作系统的实现/上篇/第1章 马上动手写一个最小的操作系统/2. 十分钟完成的操作系统.md
+++ b/Hided/Operating System/Learning/Orange's: 一个操作系统的实现/上篇/第1章 马上动手写一个最小的操作系统/2. 十分钟完成的操作系统.md
@@ -33,7 +33,7 @@ nasm boot.asm -o boot
 在Linux下可以这样做
 
 ```
-dd if=boot of=/dev/fd0 bs=512 count=1
+dd if=boot of=/dev/fd0 bs=512 count=1 conv=notrunc
 ```
 
 在Windows下可以这样做(7)：
