--- Auto-Git Commit ---

--- a/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
+++ b/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
@@ -63,7 +63,11 @@ LD_FLAGS = -T scripts/kernel.ld -m elf_i386 -nostdlib
 
 也就是说，所谓**开发操作系统**，就是想办法**制作一张**“`含有操作系统的，能够自动启动的磁盘`”。
 
-这里出现的“**映像文件**”一词，简单地说就是**软盘的备份数据**。我们想要把**特定的内容写入磁盘**可不是拿块磁铁来在磁盘上晃晃就可以的。所以我们要**先做出备份数据**，然后将这些备份数据**写入磁盘**，这样才能做出符合我们要求的磁盘。**软盘的总容量**是**1440KB**，所以作为**备份数据的映像文件**也恰好是**1440KB**。一旦我们掌握了制作磁盘映像的方法，就可以按自己的想法制作任意内容的磁盘了。
+这里出现的“**映像文件**”一词，简单地说就是**软盘的备份数据**。我们想要把**特定的内容写入磁盘**可不是拿块磁铁来在磁盘上晃晃就可以的。
+
+所以我们要**先做出备份数据**，然后将这些备份数据**写入磁盘**，这样才能做出符合我们要求的磁盘。**软盘的总容量**是**1440KB**，所以作为**备份数据的映像文件**也恰好是**1440KB**。一旦我们掌握了制作磁盘映像的方法，就可以按自己的想法制作任意内容的磁盘了。
+
+## 软盘镜像
 
 解决了理论上的问题之后，我们来解决一个现实的问题。这个问题是，这个**小内核**放在哪里？虚拟机是它运行的场所，那么**虚拟磁盘**自然就是安放内核的选择了。不过我们这次**不选择硬盘**，而是选择已经几乎消失殆尽的**1.44MB的软盘**。为什么？说实话是因为比较简单。
 
