--- Auto-Git Commit ---

--- a/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
+++ b/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
@@ -53,6 +53,8 @@ LD_FLAGS = -T scripts/kernel.ld -m elf_i386 -nostdlib
 
 # 启动镜像的制作
 
+我们希望能够做到把含有操作系统的CD-ROM或软盘插入电脑，或者将操作系统装入硬盘后，只要打开电源开关就能自动运行。
+
 为了开发这样的操作系统，我们准备按照如下的步骤来进行。
 
 ![2020-02-08-17-10-11.png](./images/2020-02-08-17-10-11.png)
