--- Auto-Git Commit ---

--- a/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/2. 计算机启动过程、GRUB 以及 multiboot 标准.md
+++ b/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/2. 计算机启动过程、GRUB 以及 multiboot 标准.md
@@ -1,5 +1,5 @@
 
-GRUB的全称是GRand Unified Bootloader，是一个多重操作系统启动管理器，用来引导不同的操作系统。
+GRUB的全称是GRand Unified Bootloader，是一个**多重操作系统启动管理器**，用来引导不同的操作系统。
 
 我们得先来简述一下操作系统的启动过程。参见`Linux/Boot/`下内容.
 
