--- Auto-Git Commit ---

--- a/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/2. 计算机启动过程、GRUB 以及 multiboot 标准.md
+++ b/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/2. 计算机启动过程、GRUB 以及 multiboot 标准.md
@@ -1,11 +1,13 @@
 
 GRUB的全称是GRand Unified Bootloader，是一个**多重操作系统启动管理器**，用来引导不同的操作系统。
 
-我们得先来简述一下操作系统的启动过程。参见`Linux/Boot/`下内容.
+详细描述GRUB之前, 我们得先来简述一下操作系统的启动过程。参见`Linux/Boot/`下内容.
 
-我们的目标内核是32位的。因为我们只是原理学习。
+说明一下, 我们的目标内核是32位的。因为我们只是原理学习。
 
-我们先来一起复习计算机原理之类的课程中对于CPU寻址的一些概念吧。首先，我们的内核使用32位的地址总线来寻址，所以能编址出2的32次方，也就是**4G的地址空间**。那么第一个问题是，这4G的空间指向哪里？我想大多数读者的第一反应都是内存吧？我们知道在主板上除了内存还有BIOS、显卡、声卡、网卡等**外部设备**，CPU需要和这些外设进行通信。那么实现通信自然就得有地址，不然怎么表示数据的去向呢？比如显卡内部就有自己的一些存储单元[^4]。在x86下，当需要访问这些存储单元的时候，就需要给予不同的访问地址来区分每一个读写单元。
+我们先来一起复习计算机原理之类的课程中对于CPU寻址的一些概念吧。首先，我们的内核使用**32位的地址总线**来寻址，所以能编址出2的32次方，也就是**4G的地址空间**。
+
+那么第一个问题是，这**4G的空间指向哪里**？我想大多数读者的第一反应都是内存吧？我们知道在主板上除了内存还有BIOS、显卡、声卡、网卡等**外部设备**，CPU需要和这些外设进行通信。那么实现通信自然就得有地址，不然怎么表示数据的去向呢？比如显卡内部就有自己的一些存储单元。在x86下，当需要访问这些存储单元的时候，就需要给予**不同的访问地址**来区分**每一个读写单元**。
 
 说到这里，我们需要引出两个专业名词：端口统一编址和端口独立编址。还记得我们刚说的4G地址空间吗？所谓的端口统一编址就是把所有和外设存储单元对应的端口直接编址在这4G的地址空间里，当我们对某一个地址进行访问的时候实际上是在访问某个外设的存储单元。而端口独立编址就是说这些端口没有编址在地址空间里，而是另行独立编址。而x86架构部分的采用了端口独立编址，又部分的采用了端口统一编址。部分外设的部分存储单元直接可以通过某个内存地址访问，而其他部分在一个独立的端口地址空间中，需要使用in/out指令去访问，我们用到的时候再来细说。
 
