--- Auto-Git Commit ---

--- a/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
+++ b/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
@@ -47,7 +47,7 @@ LD_FLAGS = -T scripts/kernel.ld -m elf_i386 -nostdlib
 
 而**ld**支持**很多种链接格式**，我们可以在**参数里指定**。那**为何选择ELF格式**呢？原因很简单，因为**GRUB**可以检测识别出**ELF格式**的**可执行文件**，并且能**找到**相关的**代码段**和**数据段**的位置信息，从而正确的把我们的**内核加载到正确的位置**上去。
 
-看懂了这个Makefile和链接器脚本，我们就向成功迈出了一大步了。大家还记得上一章谈过的**GRUB Multiboot标准**吗？只要按照标准生成规范的**Multiboot引导信息**，同时使用**标准的ELF格式**，GRUB就能把我们的内核正确的加载和执行了。
+看懂了这个Makefile和链接器脚本，我们就向成功迈出了一大步了。大家还记得上一章谈过的**GRUB Multiboot标准**吗？只要**按照标准**生成规范的**Multiboot引导信息**，同时使用**标准的ELF格式**，GRUB就能把我们的内核正确的加载和执行了。
 
 说了这么多，现在大家对计算机从加电到执行我们的内核的过程有概念了吧？如果感觉还是很模糊也不要紧，毕竟第一次接触这些东西难免需要时间消化。随着我们研究的展开，相信你会越来越清晰的。
 
