--- Auto-Git Commit ---

--- a/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
+++ b/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
@@ -47,7 +47,9 @@ LD_FLAGS = -T scripts/kernel.ld -m elf_i386 -nostdlib
 
 而**ld**支持**很多种链接格式**，我们可以在**参数里指定**。那**为何选择ELF格式**呢？原因很简单，因为**GRUB**可以检测识别出**ELF格式**的**可执行文件**，并且能**找到**相关的**代码段**和**数据段**的位置信息，从而正确的把我们的**内核加载到正确的位置**上去。
 
-看懂了这个Makefile和链接器脚本，我们就向成功迈出了一大步了。大家还记得上一章谈过的**GRUB Multiboot标准**吗？只要**按照标准**生成规范的**Multiboot引导信息**，同时使用**标准的ELF格式**，GRUB就能把我们的内核正确的加载和执行了。
+# 符合Multiboot标准
+
+看懂了这个Makefile和链接器脚本，我们就向成功迈出了一大步了。大家还记得上一章谈过的**GRUB Multiboot标准**吗？只要**按照标准**生成规范的**Multiboot引导信息**，同时使用**标准的ELF格式**，**GRUB**就能**把我们的内核正确的加载和执行**了。
 
 说了这么多，现在大家对计算机从加电到执行我们的内核的过程有概念了吧？如果感觉还是很模糊也不要紧，毕竟第一次接触这些东西难免需要时间消化。随着我们研究的展开，相信你会越来越清晰的。
 
@@ -89,11 +91,11 @@ dd if=/dev/zero of=diska.img bs=512 count=2880
 
 抱歉，我又得打断一下。因为必须引入一个新的术语名词——**文件系统**。什么是文件系统呢？其实简单的说，这里所谓的文件系统指的是**操作系统**用于明确**磁盘或分区**上的**文件存储的方法和数据结构**，即在磁盘上组织文件的方法。如果把这个**1.44MB的软盘**可以看做一个**巨大的数组**，那么**每个数组成员**都是**一个扇区**，拥有512字节的存储单元。现在需要**往这个软盘上写入文件**，那么自然需要一套合适的管理规则，否则的话岂不是全乱套了？就和这篇文档一样，不同的章节被划分在不同的位置，同时在最前面有所有章节的目录，这就是一种对信息的组织方式，文件系统也不过是这么一套组织策略罢了。
 
-考虑到兼容因素，自然是选择目前使用的比较广泛的文件系统了，这样的话也便于我们对软盘里面存储的文件进行管理操作。那么使用什么文件系统呢？**软盘**一般使用的是`FAT12`文件系统，所以我们也就不标新立异了。这个文件系统也很简单，后期大家有兴趣的话甚至可以在我们的内核里实现能处理这个文件系统的代码。至于FAT12文件系统的资料也很多，我就不详细说了。
+考虑到兼容因素，自然是选择目前使用的比较广泛的文件系统了，这样的话也便于我们对软盘里面存储的文件进行管理操作。那么使用什么文件系统呢？**软盘**一般使用的是`FAT12`文件系统，所以我们也就不标新立异了。
 
-**GRUB支持**从**很多常见的文件系统**中去**读取和载入内核文件**，当然也包括我们使用的`FAT12`格式。
+**GRUB支持**从**很多常见的文件系统！！！** 中去**读取和载入！！！内核文件**，当然也包括我们使用的`FAT12`格式。
 
-我们在**自己开发**使用的Linux系统上很容易就可以挂载和读写这个虚拟软盘里的文件，这给开发带来了极大的便利。我们经常做的事就是**拷贝编译好的内核进去**，然后在虚拟机运行。
+我们在**自己开发**使用的Linux系统上很容易就可以**挂载和读写这个虚拟软盘**里的文件，这给开发带来了极大的便利。我们经常做的事就是**拷贝编译好的内核进去**，然后在虚拟机运行。
 
 另外**这个虚拟软盘文件**里还有**GRUB**和**它的配置文件**，我提供的软盘镜像里安装的是一个**很早的GRUB版本**，它的配置文件简单到一看就懂。所以大家完全可以自己看着修改。
 
@@ -103,7 +105,9 @@ dd if=/dev/zero of=diska.img bs=512 count=2880
 
 前期的铺垫到这里就告一段落了，下面我们开始编码工作吧。
 
-代码从什么函数开始执行呢？如果你记忆力足够好的话你会记得**ld链接脚本**里面的一行文字:
+**代码从什么函数开始执行**呢？
+
+如果你记忆力足够好的话你会记得**ld链接脚本**里面的一行文字:
 
 ```
 ENTRY(start)
