--- Auto-Git Commit ---

--- a/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
+++ b/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
@@ -115,6 +115,8 @@ ENTRY(start)
 
 这就意味着我们告诉了ld链接器**入口函数是start**，所以代码从start函数开始。
 
+## boot.s入口代码
+
 大家先来一起围观下入口部分的代码全貌:
 
 ```asm
@@ -195,7 +197,9 @@ STACK_TOP equ $-stack-1      ; 内核栈顶，$ 符指代是当前地址
 
 我们简单的介绍下这段代码做的事情。
 
-首先是一些宏定义，定义了Multiboot标准的魔数和几个标识，GRUB会读取这些信息以判断我们的意图。真正的代码是从39行以后开始的，首先我们在代码段的入口位置之前定义了几个Multiboot规范要求的配置信息，其实也就是3个4字节变量。我们通过这几个变量告诉了GRUB我们要求它提供可用内存的信息，而且要求内核中所有的段在内存里按照4KB进行对齐。[^14]紧接着就是我们内核的入口函数start了，入口代码很短，主要做的是关闭中断，传参数(按照协议，GRUB把一些计算机硬件和我们内核文件相关的信息放在了一个结构体中，并且将这个结构体指针放在了ebx寄存器中)并且调用内核的入口函数。[^15]等到这个函数返回之后，内核就进入了一个死循环了。[^16]
+首先是一些宏定义，定义了**Multiboot标准的魔数和几个标识**，**GRUB**会**读取这些信息**以判断我们的意图。
+
+真正的代码是从**39行以后**开始的，首先我们在代码段的入口位置之前**定义**了几个**Multiboot规范**要求的**配置信息**，其实也就是**3个4字节变量**。我们通过这几个变量告诉了GRUB我们要求它提供可用内存的信息，而且要求内核中所有的段在内存里按照4KB进行对齐。[^14]紧接着就是我们内核的入口函数start了，入口代码很短，主要做的是关闭中断，传参数(按照协议，GRUB把一些计算机硬件和我们内核文件相关的信息放在了一个结构体中，并且将这个结构体指针放在了ebx寄存器中)并且调用内核的入口函数。[^15]等到这个函数返回之后，内核就进入了一个死循环了。[^16]
 
 这段代码我加上了很多注释，希望这能给你阅读代码带来便利。如果你之前按照我的要求认真的去翻阅了GRUB的Multiboot标准的话，因该很容易就能理解这里代码的含义。如果你理解起来感到很困难，那就结合Multiboot标准的相关规范仔细阅读，这个过程是必须的。
 
